# cm

etc/: CMakeLists.txt  main.cpp
etc/include/: example.hpp
etc/lib/: CMakeLists.txt  example.cpp
etc/test/: CMakeLists.txt  test.cpp
