cmake_minimum_required(VERSION 3.0)

project(task)
set (CMAKE_CXX_STANDARD 11)

enable_testing()

#------------------------------------------------------------------------------
# Download and unpack googletest at configure time
#------------------------------------------------------------------------------

add_subdirectory(cmake)

#------------------------------------------------------------------------------
# Setup include file
#------------------------------------------------------------------------------

include_directories(include)

#------------------------------------------------------------------------------
# Add lib code
#------------------------------------------------------------------------------

add_subdirectory(lib)

#------------------------------------------------------------------------------
# Add test code
#------------------------------------------------------------------------------

add_subdirectory(test)

#------------------------------------------------------------------------------
# Create Main Execute
#------------------------------------------------------------------------------

add_executable(${PROJECT_NAME} main.cpp)
target_link_libraries(${PROJECT_NAME} core)